# Botlatro

./: .gitignore  PLAN.md  PROGRESS.md  README.md  SETUP.md  pyproject.toml
.balatro-headless/: steam_appid.txt
.data/: balatrobench_download_headers.txt  balatrobench_kaggle_view.json  balatrobench_score_audit.txt  balatrobench_score_audit_records.jsonl  balatrobench_score_audit_summary.json  balatrobench_state_inferred_score_audit.txt  balatrobench_state_inferred_score_audit_records.jsonl  balatrobench_state_inferred_score_audit_summary.json  basic-strategy-baseline-1000-analysis.json  basic-strategy-baseline-1000-analysis.txt  basic-strategy-baseline-1000-replay-diff.json  basic-strategy-baseline-1000-replay-diff.txt  basic-strategy-baseline-1000-resume-fixed-seeds.txt  basic-strategy-baseline-1000-resume-fixed.out.txt  basic-strategy-baseline-1000-resume-manifest.json  basic-strategy-baseline-1000.out.txt  basic_strategy_bot_shop_white_20.txt  basic_strategy_bot_white_50.txt  current-light-100-analysis.txt  current-light-100-compare.json  current-light-100-compare.txt  current-light-100-seeds.txt  current-light-100.out.txt  cycle-light-100-bridge-pids.txt  cycle-summary-100-analysis.txt  cycle-summary-100-bridge-pids.txt  cycle-summary-100.out.txt  debug_1040167610_summary.jsonl  debug_923087636_summary_after_patch.jsonl  diagnostic-after-fixes-12-analysis.txt  diagnostic-after-fixes-12-bridge-pids.txt  diagnostic-after-fixes-12-v2-analysis.txt  diagnostic-after-fixes-12-v2-bridge-pids.txt  diagnostic-after-fixes-12-v2.out.txt  diagnostic-after-fixes-12.out.txt  (+46 more)
(+3873 files in other folders)
